# curator

./: .envrc  .gitignore  .nvim.lua  .yamlfmt  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  dist-workspace.toml  flake.nix  release.toml  rust-toolchain.toml
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.dex/: tasks.jsonl
.github/: build-setup.yml  dependabot.yml
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
badges/: coverage.json
crates/curator/: Cargo.toml  build.rs
crates/curator/src/: api_cache.rs  db.rs  http.rs  instance.rs  lib.rs  platform.rs  repository.rs  retry.rs
crates/curator/src/discovery/: crawler.rs  mod.rs  repo_links.rs  sitemap.rs
crates/curator/src/entity/: api_cache.rs  code_platform.rs  code_repository.rs  code_visibility.rs  instance.rs  instance_credential.rs  mod.rs  platform_metadata.rs  platform_type.rs  prelude.rs
crates/curator/src/gitea/: client.rs  convert.rs  error.rs  mod.rs  oauth.rs  types.rs
crates/curator/src/github/: client.rs  convert.rs  error.rs  mod.rs  oauth.rs  pagination.rs  repo.rs  types.rs
crates/curator/src/gitlab/: api.rs  client.rs  convert.rs  error.rs  mod.rs  oauth.rs  repo.rs  types.rs
crates/curator/src/migration/: m20250114_000001_create_schema.rs  m20250114_000002_seed_well_known_instances.rs  m20250205_000001_seed_gitlab_instances.rs  m20260210_000001_add_instance_oauth_client_id.rs  m20260309_000001_create_instance_credentials.rs  mod.rs
crates/curator/src/oauth/: callback.rs  callback_error.html  callback_success.html  error.rs  mod.rs
crates/curator/src/platform/: cache_fallback.rs  conditional.rs  convert.rs  errors.rs  pagination_stream.rs  rate_limit.rs  types.rs
crates/curator/src/repository/: bulk.rs  errors.rs  query.rs  single.rs
crates/curator/src/sync/: context.rs  engine.rs  mod.rs  persist_task.rs  progress.rs  types.rs
crates/curator/src/sync/engine/: fetch.rs  filter.rs  persist.rs  star.rs
crates/curator/tests/: repository_integration.rs  sync_integration.rs
crates/curator_cli/: Cargo.toml
crates/curator_cli/src/: config.rs  credentials.rs  main.rs  progress.rs  shutdown.rs  test_support.rs
crates/curator_cli/src/commands/: auth.rs  discover.rs  gitea.rs  github.rs  gitlab.rs  instance.rs  limits.rs  login.rs  meta.rs  migrate.rs  mod.rs  shared.rs  sync.rs
crates/curator_cli/src/progress/: interactive.rs  logging.rs
nix/swagger2openapi/: package-lock.json  package.json
specs/: README.md  gitlab-openapi3-patch.yaml  gitlab-openapi3-trimmed.yaml  gitlab-openapi3.yaml
