[package]
name = "curator"
version.workspace = true
edition = "2024"
description = "A library for curating and managing Git repositories across multiple platforms"
license = "MIT"
repository = "https://github.com/gkze/curator"
homepage = "https://github.com/gkze/curator"
readme = "../../README.md"

[features]
default = []
# Database backends (can enable both)
postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration?/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration?/sqlx-sqlite"]
# All database backends
all-databases = ["postgres", "sqlite"]
# Migration support (combine with database backend(s))
migrate = ["dep:sea-orm-migration"]
# Platform clients
github = ["dep:octocrab", "dep:backon", "dep:reqwest"]
gitlab = ["dep:gitlab", "dep:backon"]
gitea = ["dep:reqwest", "dep:backon"]

[dependencies]
sea-orm = { version = "1.1", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "with-uuid",
  "with-chrono",
  "with-json",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
  "runtime-tokio-rustls",
], optional = true }
async-trait = "0.1"
octocrab = { version = "0.49", optional = true }
gitlab = { version = "0.1808", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
], optional = true }
backon = { version = "1.6", optional = true }
tracing = "0.1"
governor = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dotenvy = "0.15"
thiserror = "2"

[dev-dependencies]
sea-orm = { version = "1.1", features = ["mock"] }

[lints]
workspace = true
