[package]
name = "curator"
version.workspace = true
edition = "2024"
description = "A library for curating and managing Git repositories across multiple platforms"
license = "MIT"
repository = "https://github.com/gkze/curator"
homepage = "https://github.com/gkze/curator"
readme = "../../README.md"

[features]
default = []
# Database backends (can enable both)
postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration?/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration?/sqlx-sqlite"]
# All database backends
all-databases = ["postgres", "sqlite"]
# Migration support (combine with database backend(s))
migrate = ["dep:sea-orm-migration"]
# Platform clients
github = ["dep:octocrab", "dep:backon", "dep:reqwest", "dep:oauth2"]
gitlab = ["dep:progenitor-client", "dep:reqwest", "dep:backon", "dep:oauth2"]
gitea = [
  "dep:reqwest",
  "dep:backon",
  "dep:oauth2",
  "dep:axum",
  "dep:sha2",
  "dep:base64",
  "dep:rand",
  "dep:urlencoding",
  "dep:open",
]
discovery = ["dep:reqwest", "dep:scraper", "dep:url", "dep:quick-xml"]

[dependencies]
sea-orm = { version = "1.1", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "with-uuid",
  "with-chrono",
  "with-json",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
  "runtime-tokio-rustls",
], optional = true }
async-trait = "0.1"
octocrab = { version = "0.49", optional = true }
progenitor-client = { version = "0.11", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "gzip",
], optional = true }
backon = { version = "1.6", optional = true }
oauth2 = { version = "5.0", default-features = false, features = [
  "reqwest",
], optional = true }
axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "http1",
  "query",
], optional = true }
# PKCE OAuth dependencies (for gitea feature)
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.9", optional = true }
urlencoding = { version = "2.1", optional = true }
open = { version = "5", optional = true }
scraper = { version = "0.20", optional = true }
url = { version = "2.5", optional = true }
quick-xml = { version = "0.37", optional = true }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dotenvy = "0.15"
thiserror = "2"

[build-dependencies]
progenitor = "0.11"
serde_json = "1"
serde_yaml_ng = "0.10"
syn = "2"
prettyplease = "0.2"

[dev-dependencies]
sea-orm = { version = "1.1", features = ["mock"] }

[lints]
workspace = true
